@@ -55,9 +55,7 @@ class worker(multiprocessing.Process):
                 break
 
             self.log.debug("worker-" + str(self.id) + ": metadata " + str(metadata["filename"]))
-#            filepath = os.path.join(metadata["relativePath"], metadata["filename"])
-#            filepath = os.path.join(basePath, filepath)
-            filepath = self.query.generateTargetFilepath(basePath, metadata)
+            filepath = self.query.generateTargetFilepath(self.basePath, metadata)
             self.log.debug("worker-" + str(self.id) + ": filepath " + filepath)
 
             with open(filepath, "r") as fileDescriptor:
@@ -88,6 +86,7 @@ if __name__ == "__main__":
 #    signalHost = "asap3-bl-prx07.desy.de"
 
 #    targets = [["asap3-bl-prx07.desy.de", "50101", 1, [".cbf"]], ["asap3-bl-prx07.desy.de", "50102", 1, [".cbf"]], ["asap3-bl-prx07.desy.de", "50103", 1, [".cbf"]]]
+#    targets = [["zitpcx19282.desy.de", "50101", 1, [".cbf"]]]
     targets = [["zitpcx19282.desy.de", "50101", 1, [".cbf"]], ["zitpcx19282.desy.de", "50102", 1, [".cbf"]], ["zitpcx19282.desy.de", "50103", 1, [".cbf"]]]
 #    targets = [["zitpcx19282.desy.de", "50101", 1], ["zitpcx19282.desy.de", "50102", 1], ["zitpcx19282.desy.de", "50103", 1]]
 #    targets = [["zitpcx19282.desy.de", "50101", 1, [".cbf"]], ["zitpcx19282.desy.de", "50102", 1, [".cbf"]], ["zitpcx19282.desy.de", "50103", 1, [".cbf"]], ["lsdma-lab04.desy.de", "50104", 1, [".cbf"]]]
