@@ -1,7 +1,11 @@
 Zeromq Data Transfer develop
 
-- Sender can now be controlled via tango
-- Added cleanup arguments into config gile
+- Added method to dataTransferAPI to manually stop streams/queries
+- Added option to specify which file formats to be send via zeromq
+- Added option look for multiple event types in parallel (combined with file suffixes)
+- DataManager can now be controlled via tango
+- Added systemd service script
+- Added cleanup arguments into config file
 - Files get accessed only if data or metadata is send via zeromq
 - Fixed DataReceiver (no shell)
 - Added command line argument error handling
